src/objects/ProjectReview__c.object
<CustomObject>
    <fields>
        <fullName>ApprovedProjectReviewCategory__c</fullName>
        <label>Approved Project Review Category</label>
        <picklist>
            <picklistValues>
                <fullName>C-0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-1+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ChangeManagementExceptionReport__c</fullName>
        <label>Change Management</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ChangeManagerIsChanged__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Change Manager Is Changed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClientRelations__c</fullName>
        <label>Client Relations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CommentsCopiedFromPreviousReview__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Comments Copied From Previous Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CompletedDate__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DelegateProject__c</fullName>
        <formula>Project__c</formula>
        <label>Delegate Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EstimatedContractValue__c</fullName>
        <formula>Project__r.EstimatedContractValue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>EventID__c</fullName>
        <label>EventID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FAParticipant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FAParticipant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FinancialPerformanceExceptionReport__c</fullName>
        <label>Financial Performance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsOpen__c</fullName>
        <formula>IF(OR( ISPICKVAL(Status__c, &quot;Not Started&quot;), ISPICKVAL(Status__c, &quot;Assessing&quot;), ISPICKVAL(Status__c, &quot;In Progress&quot;), ISPICKVAL(Status__c, &quot;Submitted&quot;)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsPerformanceReview__c</fullName>
        <formula>IF(OR((RecordType.Name == &apos;Monthly Project Review&apos; ), (RecordType.Name == &apos;Project Performance Review&apos;)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Performance Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsProjectPerformanceReview__c</fullName>
        <formula>IF(RecordType.Name == &apos;Project Performance Review&apos;, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Project Performance Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KPIPassPercentage__c</fullName>
        <description>Passed Passed KPIs / Total KPIs</description>
        <formula>IF(OR(TotalKPIs__c = 0,PassedKPIs__c = 0), 0,
(PassedKPIs__c/TotalKPIs__c)*100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KPI Pass (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MeetingMinutes__c</fullName>
        <label>Meeting Minutes</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>MonthYear__c</fullName>
        <formula>CASE(MONTH(DateValue(CreatedDate)), 
1, &quot;January&quot;, 
2, &quot;February&quot;, 
3, &quot;March&quot;, 
4, &quot;April&quot;, 
5, &quot;May&quot;, 
6, &quot;June&quot;, 
7, &quot;July&quot;, 
8, &quot;August&quot;, 
9, &quot;September&quot;, 
10, &quot;October&quot;, 
11, &quot;November&quot;, 
12, &quot;December&quot;, 
&quot;None&quot;) + &quot;, &quot; +  
TEXT(YEAR(DateValue(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationsParticipant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>OperationsParticipant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Reviews2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherPart1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Participant 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Reviews3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherPart2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Participant 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Reviews4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OtherPart3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Other Participant 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Reviews5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PassedKPIs__c</fullName>
        <description>Represents the total amount of KPI&apos;s that have passed.</description>
        <label>Passed KPIs</label>
        <summaryFilterItems>
            <field>KPI_Result__c.Evaluation_Result__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>KPI_Result__c.Project_Review__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PnLManager__c</fullName>
        <formula>Project__r.PnLManager__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PnL Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectAccountant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Accountant</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectReviewsProjectAccountant</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectApprover__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ProjectReviewsProjectApprover</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProjectLongName__c</fullName>
        <formula>Project__r.ProjectLongName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Long Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectManager__c</fullName>
        <formula>Project__r.pse__Project_Manager__r.FirstName&amp;&quot; &quot;&amp;Project__r.pse__Project_Manager__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <formula>Project__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectNumber__c</fullName>
        <formula>Project__r.ProjectNumber__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectReviewCategory__c</fullName>
        <formula>TEXT(Project__r.clAECOMProjectReviewCategory__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Review Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectReviewTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Review Template</label>
        <referenceTo>ProjectReviewTemplate__c</referenceTo>
        <relationshipLabel>Project Reviews</relationshipLabel>
        <relationshipName>ProjectReviewsTemplate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <referenceTo>pse__Proj__c</referenceTo>
        <relationshipLabel>Project Reviews</relationshipLabel>
        <relationshipName>ProjectReviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QualityException__c</fullName>
        <label>Quality Exception</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ResponsiblePerson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Project Reviews (Responsible Person)</relationshipLabel>
        <relationshipName>ProjectReviewsReponsiblePerson</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Responsible_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Person</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReviewFrequency__c</fullName>
        <label>Review Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi-Weekly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RiskManagement__c</fullName>
        <label>Risk Management</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SafetyExceptionReport__c</fullName>
        <label>Safety</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ScheduledDate__c</fullName>
        <label>Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SheduleExceptionReport__c</fullName>
        <label>Shedule</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StaffResourcesExceptionReport__c</fullName>
        <label>Staff Resources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Assessing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubsExceptionReport__c</fullName>
        <label>Sub Exception Report</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TotalKPIs__c</fullName>
        <description>Sums the total amount of KPIs created against project review</description>
        <label>Total KPIs</label>
        <summaryForeignKey>KPI_Result__c.Project_Review__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Reviews</pluralLabel>
    <recordTypes>
        <fullName>BIMHealthyStart</fullName>
        <active>true</active>
        <description>BIM Healthy Start is designed to provide the project pursuit or project management team full access to AECOM BIM experts to better understand, plan, respond, and deliver BIM projects to our clients.  This review is required anytime a project is executed o</description>
        <label>BIM Healthy Start</label>
    </recordTypes>
    <recordTypes>
        <fullName>GoNoGo</fullName>
        <active>true</active>
        <label>Go/No Go</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthyRestart</fullName>
        <active>false</active>
        <description>Ut consectetur, velit vel placerat semper, felis nibh molestie nisi, sit amet blandit urna arcu a nibh.</description>
        <label>Healthy Restart</label>
    </recordTypes>
    <recordTypes>
        <fullName>HealthyStart</fullName>
        <active>true</active>
        <description>The Healthy Start Review is to assure that a project is initiated in an appropriate manner to promote the greatest potential for success during its execution. The Healthy Restart Review is to assure that a project that has been identified as either exposi</description>
        <label>Healthy Start/Restart</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Any other reviews or meetings identified by the PM, project team or client throughout the life of the project.</description>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>PerformanceReview</fullName>
        <active>true</active>
        <description>The Performance Review assesses the financial health of the project and adherence to scope, schedule, budget and other issues commensurate with the risk inherent in the project.  AECOM assigns a Project Review Category to each project based on the level o</description>
        <label>Monthly Project Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProjectClosure</fullName>
        <active>true</active>
        <description>The Project Closeout review verifies that all project and performance goals and requirements have been successfully achieved, ensures mandatory project delivery requirements have been properly completed, and derives any lessons learned to apply to future</description>
        <label>Project Closeout</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProjectKickoff</fullName>
        <active>true</active>
        <description>The Project Kickoff meeting reviews essential project information at the beginning of the project with the project team, including subs and/or partners.  A separate meeting may also be conducted with the client to foster mutual understanding of and clarif</description>
        <label>Project Kickoff</label>
    </recordTypes>
    <recordTypes>
        <fullName>ProjectPerformanceReview</fullName>
        <active>true</active>
        <label>Project Performance Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>TechnicalApproachReview</fullName>
        <active>true</active>
        <label>Technical Approach Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tier1ProjectPerformance_Review</fullName>
        <active>false</active>
        <label>Tier 1 Project Performance Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tier2ProjectPerformanceReview</fullName>
        <active>false</active>
        <label>Tier 2 Project Performance Review</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>EcoHealthyStart</fullName>
        <active>false</active>
        <description>Healthy start may only be selected for C-0,C-1,C-1+,C-2 projects and projects with revenue &gt; 5M</description>
        <errorConditionFormula>AND(RecordType.Name = &quot;Healthy Start&quot;,
OR(ProjectReviewCategory__c &lt;&gt; &quot;C-0&quot;,
ProjectReviewCategory__c &lt;&gt; &quot;C-1&quot;,
ProjectReviewCategory__c &lt;&gt; &quot;C-1+&quot;,
AND(ProjectReviewCategory__c &lt;&gt; &quot;C-2&quot;, EstimatedContractValue__c &lt; 5000000)))</errorConditionFormula>
        <errorMessage>Healthy start may only be selected for C-0,C-1,C-1+,C-2 projects and projects with revenue greater than or equal to 5M</errorMessage>
    </validationRules>
</CustomObject>